Fix ship placment bug
Players can no longer place ships on overlapping spaces. The current
solution only pertains to horizontally placed ships. The next update
will account for vertically placed ships as well.

--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,7 @@ body {
 .boardSpace {
     border: 1px solid black;
 }
+
+.carrier {
+	background-color: lightblue;
+}
